# xmonad-config

./: .gitignore  build  disconsis-xmonad.cabal
src/: Color.hs  Main.hs  Mode.hs  Polybar.hs  Utils.hs
