cabal-version: 1.12

name:           disconsis-xmonad
version:        0.1.0.0
author:         disconsis
build-type:     Simple

executable disconsis-xmonad
  main-is: Main.hs

  other-modules: Polybar
               , Color
               , Mode

  hs-source-dirs:
      src

  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -O2

  build-depends: base >=4.7 && <5
               , xmonad
               , xmonad-contrib
               , containers
               , X11
               , utf8-string
               , dbus
               , turtle
               , extra
               , text
               , foldl
               , mtl
               , transformers

  default-language: Haskell2010
